# telos

./: .gitignore  Cargo.toml  README.md
crates/telos-cli/: Cargo.toml
crates/telos-cli/src/: main.rs
crates/telos-cli/src/commands/: agent_log.rs  bind.rs  changeset.rs  check.rs  constraint.rs  context.rs  decide.rs  deprecate.rs  init.rs  intent.rs  log.rs  mod.rs  query.rs  reindex.rs  show.rs  stream.rs  supersede.rs
crates/telos-core/: Cargo.toml
crates/telos-experiment/: Cargo.toml
crates/telos-experiment/scenarios/: benign_bugfix.toml  benign_performance.toml  benign_refactor.toml  constraint_violation.toml  info_leak.toml  privilege_escalation.toml  status_validation_removal.toml
crates/telos-experiment/src/: codex.rs  lib.rs  main.rs  report.rs  runner.rs  scenario.rs  scorer.rs
crates/telos-store/: Cargo.toml
docs/: CONSTRAINT_AUTHORING.md  EVALUATION.md  INTEGRATION.md  REVIEW.md  TELOS_V2_DESIGN.md
docs/adr/: 001-content-addressable-storage.md  002-query-design.md
docs/claude-analysis/: README.md  debate-round1-position-papers.md  debate-round2-cross-examination.md  debate-round3-key-questions.md  execution-log.md  synthesis.md  test-suite-inventory.md
docs/codex-analysis/: CODEX_ANALYSIS_REPORT.md  DEBATE_TRANSCRIPT.md  EXEC_SUMMARY.md  MULTI_AGENT_FINDINGS.md
docs/plans/: 2026-02-28-v2-implementation-design.md  2026-02-28-v2-implementation-plan.md
tests/integration/: cli_test.rs
validation/: llm_harness.py  run_all.sh  scoring_v2.py
validation/conflicting/: setup.sh
validation/experiments/: conflict_test.py  debugging_test.py  (+8 more)
(+57 files in other folders)
