[workspace]
resolver = "2"
members = [
    "crates/telos-core",
    "crates/telos-store",
    "crates/telos-cli",
]
exclude = [
    "validation/taskboard",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
