[package]
name = "telos-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
telos-core = { path = "../telos-core" }
telos-store = { path = "../telos-store" }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }

[[test]]
name = "cli_integration"
path = "../../tests/integration/cli_test.rs"
